Fixed mouse bug, settings, made minimal character select, removed skins, fixed css overflow, fixed socket.io missing.

--- a/WebInterface/PixelDemo.css
+++ b/WebInterface/PixelDemo.css
@@ -171,6 +171,7 @@ a, a:hover, a:focus {
 	max-height:100%;
 	position:fixed;
 	overflow-y:auto;
+	overflow-x: hidden;
 }
 
 
